--- a/assessement_tool.ipynb
+++ b/assessement_tool.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 1,
             "source": [
                 "import pandas as pd\n",
                 "import dash\n",
@@ -18,17 +18,26 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 2,
             "source": [
                 "data = pd.read_excel(\"UNICEF_framework_V09.xlsx\", sheet_name=\"All\", skiprows=2)\n",
                 "data = data.set_index(\"Reference\")\n"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stderr",
+                    "text": [
+                        "/opt/homebrew/Caskroom/miniforge/base/envs/dash/lib/python3.8/site-packages/openpyxl/worksheet/_reader.py:312: UserWarning: Data Validation extension is not supported and will be removed\n",
+                        "  warn(msg)\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 3,
             "source": [
                 "def make_brand(**kwargs):\n",
                 "    return html.Div(\n",
@@ -154,7 +163,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 4,
             "source": [
                 "def make_questions(category, questions):\n",
                 "    selections = [\n",
@@ -240,7 +249,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 5,
             "source": [
                 "groups = []\n",
                 "for category in data[\"Assessment\"].unique():\n",
@@ -259,7 +268,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 6,
             "source": [
                 "from dash.dependencies import Input, Output, State, ALL, MATCH\n",
                 "\n",
@@ -351,7 +360,7 @@
                 "        columns=[\n",
                 "            dict(id=\"Issue\", name=\"Issue\", type=\"text\"),\n",
                 "            dict(id=\"Score\", name=\"Score\", type=\"numeric\"),\n",
-                "            dict(id=\"Rating\", name=\"Materiality\", type=\"text\"),\n",
+                "            dict(id=\"Materiality\", name=\"Materiality\", type=\"text\"),\n",
                 "        ],\n",
                 "        style_cell={\"textAlign\": \"left\"},\n",
                 "        sort_by=[{\"column_id\": \"Score\", \"direction\": \"asc\"}],\n",
@@ -484,28 +493,7 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "Dash app running on http://127.0.0.1:8081/\n",
-                        "Materiality\n"
-                    ]
-                },
-                {
-                    "output_type": "stream",
-                    "name": "stderr",
-                    "text": [
-                        "/var/folders/p3/94bd9hy940qfv4_mwt7sq9lm0000gn/T/ipykernel_16962/2584898519.py:102: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-                        "  assessment[table[\"Scope\"] == \"business\"]\n",
-                        "/var/folders/p3/94bd9hy940qfv4_mwt7sq9lm0000gn/T/ipykernel_16962/2584898519.py:107: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-                        "  assessment[table[\"Scope\"] == \"supply\"]\n"
-                    ]
-                },
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "Due diligence\n",
-                        "Due diligence\n",
-                        "Mitigation\n",
-                        "Materiality\n"
+                        "Dash app running on http://127.0.0.1:8081/\n"
                     ]
                 }
             ],
