--- a/assessement_tool.ipynb
+++ b/assessement_tool.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -12,7 +12,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -21,7 +21,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -71,7 +71,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -98,7 +98,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [
                 {
@@ -123,101 +123,109 @@
                             "    <tr style=\"text-align: right;\">\n",
                             "      <th></th>\n",
                             "      <th></th>\n",
+                            "      <th></th>\n",
                             "      <th>ISSUE_INDEX_SCORE</th>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>COUNTRY_ISO_3</th>\n",
                             "      <th>INDICATOR_ISSUE</th>\n",
+                            "      <th>TIME_PERIOD</th>\n",
                             "      <th></th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th rowspan=\"5\" valign=\"top\">AFG</th>\n",
-                            "      <th>Child labour</th>\n",
+                            "      <th rowspan=\"4\" valign=\"top\">Child labour</th>\n",
+                            "      <th>2014</th>\n",
+                            "      <td>5.083810</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2018</th>\n",
+                            "      <td>5.083810</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2019</th>\n",
+                            "      <td>5.083810</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2020</th>\n",
                             "      <td>5.083810</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>Community and Environment</th>\n",
-                            "      <td>2.705000</td>\n",
+                            "      <th>2016</th>\n",
+                            "      <td>1.780000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
-                            "      <th>Decent working conditions</th>\n",
-                            "      <td>2.327403</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>Marketing and Advertising</th>\n",
-                            "      <td>7.903121</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>Marketplace</th>\n",
-                            "      <td>8.308000</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
+                            "      <th>...</th>\n",
                             "      <th>...</th>\n",
                             "      <th>...</th>\n",
                             "      <td>...</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th rowspan=\"5\" valign=\"top\">ZWE</th>\n",
-                            "      <th>Maternity and paternity protection</th>\n",
-                            "      <td>3.022127</td>\n",
+                            "      <th rowspan=\"3\" valign=\"top\">Online Abuse and exploitation</th>\n",
+                            "      <th>2016</th>\n",
+                            "      <td>5.346111</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
-                            "      <th>Natural disasters</th>\n",
-                            "      <td>4.687000</td>\n",
+                            "      <th>2018</th>\n",
+                            "      <td>5.346111</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
-                            "      <th>Online Abuse and exploitation</th>\n",
+                            "      <th>2020</th>\n",
                             "      <td>5.346111</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>Product Safety</th>\n",
+                            "      <th>2020</th>\n",
                             "      <td>5.359167</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>Resource use and damage to the environment</th>\n",
+                            "      <th>2019</th>\n",
                             "      <td>5.315698</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
-                            "<p>2083 rows × 1 columns</p>\n",
+                            "<p>4614 rows × 1 columns</p>\n",
                             "</div>"
                         ],
                         "text/plain": [
-                            "                                                          ISSUE_INDEX_SCORE\n",
-                            "COUNTRY_ISO_3 INDICATOR_ISSUE                                              \n",
-                            "AFG           Child labour                                         5.083810\n",
-                            "              Community and Environment                            2.705000\n",
-                            "              Decent working conditions                            2.327403\n",
-                            "              Marketing and Advertising                            7.903121\n",
-                            "              Marketplace                                          8.308000\n",
-                            "...                                                                     ...\n",
-                            "ZWE           Maternity and paternity protection                   3.022127\n",
-                            "              Natural disasters                                    4.687000\n",
-                            "              Online Abuse and exploitation                        5.346111\n",
-                            "              Product Safety                                       5.359167\n",
-                            "              Resource use and damage to the environment           5.315698\n",
+                            "                                                                      ISSUE_INDEX_SCORE\n",
+                            "COUNTRY_ISO_3 INDICATOR_ISSUE                            TIME_PERIOD                   \n",
+                            "AFG           Child labour                               2014                  5.083810\n",
+                            "                                                         2018                  5.083810\n",
+                            "                                                         2019                  5.083810\n",
+                            "                                                         2020                  5.083810\n",
+                            "              Community and Environment                  2016                  1.780000\n",
+                            "...                                                                                 ...\n",
+                            "ZWE           Online Abuse and exploitation              2016                  5.346111\n",
+                            "                                                         2018                  5.346111\n",
+                            "                                                         2020                  5.346111\n",
+                            "              Product Safety                             2020                  5.359167\n",
+                            "              Resource use and damage to the environment 2019                  5.315698\n",
                             "\n",
-                            "[2083 rows x 1 columns]"
+                            "[4614 rows x 1 columns]"
                         ]
                     },
-                    "execution_count": 17,
+                    "execution_count": 19,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "index_scores.groupby(['COUNTRY_ISO_3', 'INDICATOR_ISSUE']).agg({\"ISSUE_INDEX_SCORE\": \"last\"})"
+                "index_scores.groupby(['COUNTRY_ISO_3', 'INDICATOR_ISSUE', 'TIME_PERIOD']).agg({\"ISSUE_INDEX_SCORE\": \"last\"})"
             ]
         }
     ],
     "metadata": {
         "interpreter": {
-            "hash": "4cd7ab41f5fca4b9b44701077e38c5ffd31fe66a6cab21e0214b68d958d0e462"
+            "hash": "2b51991d52786c9c5d83e3584188eaa4f1e24893eba2f148093816fab83cb0f8"
         },
         "kernelspec": {
-            "display_name": "Python 3.9.7 64-bit",
+            "display_name": "Python 3.8.10 64-bit ('dash': conda)",
             "name": "python3"
         },
         "language_info": {
@@ -230,7 +238,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.7"
+            "version": "3.8.10"
         },
         "orig_nbformat": 4
     },
